[package]
name = "maskerad_localization"
version = "0.1.0"
authors = ["Maskerad Developers <maskerad-rs.organization@protonmail.com>"]
description = "CLI tool to generate localized text from a CSV file to JSON files"
license = "MIT/Apache-2.0"
repository = "https://github.com/Maskerad-rs/maskerad_localization"
readme = "README_CRATE.md"

[badges]

appveyor = { repository = "Malkaviel/maskerad-localization", branch= "master", service = "github" }
travis-ci = { repository = "Maskerad-rs/maskerad_localization", branch = "master" }
codecov = { repository = "Maskerad-rs/maskerad_localization", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "Maskerad-rs/maskerad_localization" }
is-it-maintained-open-issues = { repository = "Maskerad-rs/maskerad_localization" }
maintenance = { status = "actively-developed" }

[dependencies]
# Serde and serde derive (Serialization/Deserialization library)
serde = "~1.0"
serde_derive = "~1.0"

# JSON serialization/deserialization
serde_json = "~1.0"

# CSV
csv = "~0.15"